// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for ProductImg debe de mostrar el component con  la imagen en su componente 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`test for ProductImg debe de mostrar el component de imagen 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="customImage.png"
/>
`;
